tests/invalid/global_variables/multiple_global_defs.rs
/*
fail: 1
*/

foo: int = 3;

main(): int {
    return foo;
}

foo: int = 0;